--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/landing.css" />
+		<link rel="stylesheet" href="static/assets/css/landing.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
@@ -23,12 +23,15 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="#">
-				<input type="text" name="email" id="email" placeholder="Username" />
-        <input type="password" name="password" id="password" placeholder="Password" />
-				<input type="submit" value="Login" />
-<p></br><font color="white">Don't have an account? <a href="SignUp.html">SignUp</a></font></p>
-      </form>
+			<form id="signup-form" method="post" action="{{url_for('landing')}}">
+				<input type="text" name="username" id="username" placeholder="Username" />
+        		<input type="password" name="password" id="password" placeholder="Password" />
+				<input type="submit" name="submit" value="Login" />
+			</form>
+
+
+			<p><font color="white">Don't have an account? <a href="{{url_for('signup')}}">SignUp</a></font></p>
+      
 
 
 		<!-- Footer -->
@@ -38,7 +41,7 @@
 
 		<!-- Scripts -->
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/landing.js"></script>
+			<script src="static/assets/js/landing.js"></script>
 
 	</body>
 </html>
