implemented basic relationships employer and job request

--- a/app/templates/LandingPage.html
+++ b/app/templates/LandingPage.html
@@ -145,12 +145,15 @@
 							<section>
 								<input type='button' id='hideshow' value='Create Job' class="job-margin">
 								<div id="to_show" style="display: none;">
+									<!-- <form method="post" action="{{url_for('CreateEmployer')}}"> -->
+
 									<label class="reset-label"> <input Placeholder="Title of the Job" type="text" name="title_input"></label>
 									<!-- <input type="text" name="city" id="city" value="" placeholder="City" /> -->
 									<label class="reset-label"> <input Placeholder="Description of the Job" type="text" name="description_input"></label>
 									<label class="reset-label"> <input Placeholder="Number of Workers" type="text" name="number_input"></label>
 									<label class="reset-label"> <input PlaceHolder="Time" type="text" name="time_input"></label>
 									<button class="action-button" id="job_submit">Submit</button>
+								
 								</div>
 							</section>
 							<section>
