new database code for relational database and employer and request

--- a/app/templates/LandingPage.html
+++ b/app/templates/LandingPage.html
@@ -66,7 +66,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
-		<div>				<h1>{{ name }}</h1>
+		<div>				<h1 id="username">{{ name }}</h1>
 </div>
 
 		<!-- Wrapper -->
@@ -153,7 +153,7 @@
 									<label class="reset-label"> <input Placeholder="Number of Workers" type="text" name="number_input"></label>
 									<label class="reset-label"> <input PlaceHolder="Time" type="text" name="time_input"></label>
 									<button class="action-button" id="job_submit">Submit</button>
-								
+
 								</div>
 							</section>
 							<section>
