--- a/app/templates/LandingPage.html
+++ b/app/templates/LandingPage.html
@@ -273,6 +273,7 @@
 									<li><a href="#" class="fa-rss"><span class="label">RSS</span></a></li>
 									<li><a href="#" class="fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
+								<p><a href="{{url_for('logout')}}">Log Out</a></p>
 								<p class="copyright">&copy; Labor2Day.</p>
 							</section>
 
