--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="{{url_for('landing')}}">
+			<form id="signup-form" method="post" action="{{url_for('login')}}">
 				<input type="text" name="username" id="username" placeholder="Username" />
         		<input type="password" name="password" id="password" placeholder="Password" />
 				<input type="submit" name="submit" value="Login" />
@@ -31,7 +31,7 @@
 
 
 			<p><font color="white">Don't have an account? <a href="{{url_for('signup')}}">SignUp</a></font></p>
-      
+
 
 
 		<!-- Footer -->
