--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,6 +27,7 @@
 				<input type="text" name="username" id="username" placeholder="Username" />
         		<input type="password" name="password" id="password" placeholder="Password" />
 				<input type="submit" name="submit" value="Login" />
+				<p> {{ error }} </p>
 			</form>
 
 
