--- a/app/templates/LandingPage.html
+++ b/app/templates/LandingPage.html
@@ -37,9 +37,9 @@
 					<div class="card-margin">
 						<div class="scroll">
 							<!-- <h2> Laborers Database </h2> -->
-							<div class="row">
-								<div id="card-right">
-								</div>
+							<div class="row" id="card-right" style="margin-left:20px;">
+								<!-- <div id="card-right">
+								</div> -->
 							</div>
 						</div>
 					</div>
