--- a/app/templates/LandingPage.html
+++ b/app/templates/LandingPage.html
@@ -16,9 +16,17 @@
 		<link rel="stylesheet" href="/static/assets/css/main.css" />
 	</head>
 	<body>
-		<div>
-			<h1 id="username">{{ name }}</h1>
+		<div class="parallax-container">
+			<div class="parallax"><img src="../static/images/factory-black-white-header.png"></div>
+			<div class="header-info">
+				<div class="row">
+					<h4 id="username" class="header-text">{{ name }}</h1>
+					<h4 class="header-text"><a href="{{url_for('logout')}}">Log Out</a></h1>
+				</div>
+			</div>
 		</div>
+		
+		
 
 		<!-- Wrapper -->
 		<div id="wrapper">
@@ -89,7 +97,7 @@
 								<li><a href="#" class="fa-rss"><span class="label">RSS</span></a></li>
 								<li><a href="#" class="fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p><a href="{{url_for('logout')}}">Log Out</a></p>
+							<!--<p><a href="{{url_for('logout')}}">Log Out</a></p>-->
 							<p class="copyright">&copy; Labor2Day.</p>
 						</section>
 
@@ -98,6 +106,11 @@
 		</div>
 
 		<!-- Scripts -->
+		<script>
+			$(document).ready(function(){
+				$('.parallax').parallax();
+			});
+		</script>
 		<script src="/static/assets/js/jquery.min.js"></script>
 		<script src="/static/assets/js/skel.min.js"></script>
 		<script src="/static/assets/js/util.js"></script>
