jobcard laborer check for num workers

--- a/app/templates/LandingPage.html
+++ b/app/templates/LandingPage.html
@@ -74,8 +74,8 @@
 								<label class="reset-label"> <input Placeholder="Title of the Job" type="text" name="title_input"></label>
 								<!-- <input type="text" name="city" id="city" value="" placeholder="City" /> -->
 								<label class="reset-label"> <input Placeholder="Description of the Job" type="text" name="description_input"></label>
-								<label class="reset-label"> <input Placeholder="Number of Workers" type="text" name="number_input"></label>
-								<label class="reset-label"> <input PlaceHolder="Time" type="text" name="time_input"></label>
+								<label class="reset-label"> <input Placeholder="Number of Workers" type="number" name="number_input"></label>
+								<label class="reset-label"> <input PlaceHolder="Time" type="time" name="time_input"></label>
 								<button class="action-button" id="job_submit">Submit</button>
 
 							</div>
