--- a/app/templates/LandingPage.html
+++ b/app/templates/LandingPage.html
@@ -18,6 +18,9 @@
 	<body>
 		<div class="parallax-container">
 			<div class="parallax"><img src="../static/images/factory-black-white-header.png"></div>
+			<div class="header-top" >
+				<h1 style="color:green"> Labor2Day </h1>
+			</div>
 			<div class="header-info">
 				<div class="row">
 					<!--<h4 id="username" class="header-text">{{ name }}</h4>-->
