--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -27,8 +27,8 @@
 				</div>
 			</div>
 		</div>
-		
-		
+
+
 
 		<!-- Wrapper -->
 		<div id="wrapper">
@@ -42,28 +42,31 @@
 						</header>
 					</section>
 					<div id ="profile-cards" class="row">
-						
-						
+
+
 					</div>
 				</div>
 
 			<!-- Sidebar -->
-				<div id="sidebar">
 
-					<!-- Footer -->
-						<section id="footer">
-							<ul class="icons">
-								<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="fa-rss"><span class="label">RSS</span></a></li>
-								<li><a href="#" class="fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
-							<!--<p><a href="{{url_for('logout')}}">Log Out</a></p>-->
-							<p class="copyright">&copy; Labor2Day.</p>
-						</section>
+		</div>
 
-				</div>
+		<div id="sidebar" style="padding:4em">
+			
+
+			<!-- Footer -->
+				<section id="footer">
+					<ul class="icons">
+						<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="fa-rss"><span class="label">RSS</span></a></li>
+						<li><a href="#" class="fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<!--<p><a href="{{url_for('logout')}}">Log Out</a></p>-->
+					<p class="copyright">&copy; Labor2Day.</p>
+				</section>
+
 		</div>
 
 		<!-- Scripts -->
