--- a/app/templates/LandingPage.html
+++ b/app/templates/LandingPage.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Future Imperfect by HTML5 UP</title>
+		<title>Labor2Day</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,6 +18,10 @@
 	<body>
 		<div class="parallax-container">
 			<div class="parallax"><img src="../static/images/factory-black-white-header.png"></div>
+			<div class="header-top" >
+			<div style="width:100px; height: 50px;"><img src="../static/images/logo_green.png"></div>
+			<h1 style="color: rgba(255,255,255,0.75); padding-top: 0.4em; font-size: 1.75em">Labor2Day</h1>			 
+			</div>
 			<div class="header-info">
 				<div class="row">
 					<!--<h4 id="username" class="header-text">{{ name }}</h4>-->
@@ -26,8 +30,8 @@
 				</div>
 			</div>
 		</div>
-		
-		
+
+
 
 		<!-- Wrapper -->
 		<div id="wrapper">
