--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -19,6 +19,11 @@
 	<body>
 		<div class="parallax-container">
 			<div class="parallax"><img src="../static/images/factory-black-white-header.png"></div>
+			<div class="header-top" >
+			<div style="width:100px; height: 50px;"><img src="../static/images/logo_green.png"></div>
+			<h1 style="color: rgba(255,255,255,0.75); padding-top: 0.4em; font-size: 1.75em">
+			 Labor2Day </h1> 
+			</div>
 			<div class="header-info">
 				<div class="row">
 					<h4 class="header-text">{{ name }}</h1>
@@ -52,7 +57,7 @@
 		</div>
 
 		<div id="sidebar" style="padding:4em">
-			
+
 
 			<!-- Footer -->
 				<section id="footer">
