--- a/app/static/assets/css/main.css
+++ b/app/static/assets/css/main.css
@@ -3660,3 +3660,8 @@ input[type="button2"],button2,.button2 {
 	font-size: .7em;
 	line-height: 0;
 }
+
+a:hover {
+    border-bottom-color: transparent;
+    color: #424242 !important;
+}
