--- a/app/templates/LandingPage.html
+++ b/app/templates/LandingPage.html
@@ -19,7 +19,12 @@
 		<div class="parallax-container">
 			<div class="parallax"><img src="../static/images/factory-black-white-header.png"></div>
 			<div class="header-top" >
-				<h1 style="color:green"> Labor2Day </h1>
+				<!--<h1 style="color: rgba(0,150,136,0.5); padding-top: 0.4em; font-size: 1.75em">
+				 Labor2Day </h1>-->
+				<div style="width:100px; height: 50px;"><img src="../static/images/logo_green.png"></div>
+				<h1 style="color: rgba(255,255,255,0.75); padding-top: 0.4em; font-size: 1.75em">
+				 Labor2Day </h1>
+				 
 			</div>
 			<div class="header-info">
 				<div class="row">
