--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -19,6 +19,10 @@
 	<body>
 		<div class="parallax-container">
 			<div class="parallax"><img src="../static/images/factory-black-white-header.png"></div>
+			<div class="header-top" >
+				<h1 style="color: rgba(255,255,255,0.75); padding-top: 0.4em; font-size: 1.75em">
+					 Labor2Day </h1>
+			</div>
 			<div class="header-info">
 				<div class="row">
 					<h4 class="header-text">{{ name }}</h1>
