--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Future Imperfect by HTML5 UP</title>
+		<title>Labor2Day</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,7 +22,7 @@
 			<div class="header-top" >
 			<div style="width:100px; height: 50px;"><img src="../static/images/logo_green.png"></div>
 			<h1 style="color: rgba(255,255,255,0.75); padding-top: 0.4em; font-size: 1.75em">
-			 Labor2Day </h1> 
+			 Labor2Day </h1>
 			</div>
 			<div class="header-info">
 				<div class="row">
